<resources>
    <string name="app_name">AlgoCube</string>
    <string name="left_hand">Left Hand</string>
    <string name="right_hand">Right Hand</string>
    <string name="reset">Save / Reset</string>
    <string name="learn">Learn</string>
    <string name="timer">Timer</string>
    <string name="stats">Stats</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="average_time">Average Time:</string>
    <string name="best_time">Best Time:</string>
    <string name="clear_solves">Clear Solves</string>
    <string name="oll" translatable="false">OLL</string>
    <string name="pll" translatable="false">PLL</string>
    <string name="beginner" translatable="false">Beginner</string>
    <string name="info">Info</string>
    <string name="about">Made by Gal Birka</string>
    <string name="learn3">Learn 3X3</string>
    <string name="learn2">Learn 2X2</string>


    <string name="start_time" translatable="false">00:00:00</string>
</resources>