<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Activity_Stats">

    <TextView
        android:id="@+id/stats_txt_best_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/best_time"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/stats_txt_best_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/stats_txt_best_txt"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/stats_txt_avg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats_txt_best_txt"
        android:layout_marginStart="20dp"
        android:text="@string/average_time"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/stats_txt_avg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_txt_best_time"
        android:layout_alignStart="@id/stats_txt_best_time"
        android:textSize="26sp" />


    <com.anychart.AnyChartView
        android:id="@+id/stats_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/stats_btn_clear"
        android:layout_below="@+id/stats_txt_avg_txt" />

    <Button
        android:id="@+id/stats_btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/staatliches"
        android:text="@string/clear_solves"
        android:textSize="26sp" />


</RelativeLayout>